# proxmox-oci-lxc

./: .gitignore  AGENTS.md  LICENSE  README.md  install.sh  pve-ct-999-config-backup.json
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: kiro-cli.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
pve-oci-upgrade/: README.md  create-test-lxc.sh  destroy-test-lxc.sh  pve-ct-999-config-backup.json  pve_oci_upgrade.py  pyproject.toml  requirements.txt  test-lxc.yml  upgrade-test-lxc.sh
pve-oci-upgrade/examples/: containers.yml
pve-oci-upgrade/src/pve_oci_upgrade/: __init__.py  __main__.py  apply.py  backup.py  cli.py  client.py  config.py  credentials.py  deploy.py  deploy_fresh.py  deploy_upgrade.py  destroy.py  generate.py  manifest.py  rollback.py  storage.py  template.py  validate.py
